# masstrust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README_ja.md  README_zh.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
crates/masstrust-cli/: Cargo.toml
crates/masstrust-cli/src/: main.rs  plot.rs
crates/masstrust-cli/src/commands/: apply.rs  batch.rs  calibrate.rs  curve.rs  mod.rs
crates/masstrust-cli/tests/: cli.rs
crates/masstrust-core/: Cargo.toml
crates/masstrust-core/src/: error.rs  io.rs  lib.rs  policy.rs  types.rs
crates/masstrust-core/src/calibration/: binomial.rs  crc.rs  empirical.rs  grouped.rs  mod.rs
crates/masstrust-core/src/metrics/: aurc.rs  mod.rs  risk_coverage.rs
crates/masstrust-core/src/scoring/: entropy.rs  margin.rs  max_prob.rs  mod.rs  score_gap.rs
crates/masstrust-core/tests/: integration.rs
crates/masstrust-py/: Cargo.toml
crates/masstrust-py/src/: lib.rs
examples/: candidates.csv  labeled_candidates.csv  labeled_candidates_grouped.csv  massspecgym_candidates.csv
tasks/: todo.md
