[workspace]
members = [
    "crates/masstrust-core",
    "crates/masstrust-cli",
    "crates/masstrust-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/masstrust"
homepage = "https://github.com/kent-tokyo/masstrust"
