[package]
name = "masstrust-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "masstrust"
path = "src/main.rs"

[features]
plot = ["dep:plotters"]

[dependencies]
masstrust-core = { path = "../masstrust-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = ["svg_backend", "line_series"]

[dev-dependencies]
tempfile = "3"
serde_json = "1"
