[package]
name = "masstrust-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for selective prediction and confidence calibration in MS/MS annotation"
keywords = ["mass-spectrometry", "metabolomics", "cli", "calibration"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "masstrust"
path = "src/main.rs"

[features]
plot = ["dep:plotters"]

[dependencies]
masstrust-core = { path = "../masstrust-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = ["svg_backend", "line_series"]

[dev-dependencies]
tempfile = "3"
serde_json = "1"
