[package]
name = "masstrust-core"
version = "0.1.0"
edition = "2021"

[features]
parquet = ["dep:polars"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
thiserror = "1"

[dependencies.polars]
version = "0.46"
optional = true
default-features = false
features = ["parquet", "lazy", "dtype-full"]

[dev-dependencies]
tempfile = "3"
