[package]
name = "masstrust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for selective prediction and confidence calibration in MS/MS annotation"
keywords = ["mass-spectrometry", "metabolomics", "calibration", "selective-prediction"]
categories = ["science", "algorithms"]

[features]
parquet = ["dep:polars"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
thiserror = "1"

[dependencies.polars]
version = "0.46"
optional = true
default-features = false
features = ["parquet", "lazy", "dtype-full"]

[dev-dependencies]
tempfile = "3"
