[package]
name = "masstrust-py"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for masstrust via pyo3"
keywords = ["mass-spectrometry", "metabolomics", "python", "pyo3"]
categories = ["science"]

[lib]
name = "masstrust"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
masstrust-core = { path = "../masstrust-core" }
pyo3 = "0.22"
serde_json = "1"
